[PJ-944] - Some alignment/position fixes

--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-right.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-right.scss
@@ -40,7 +40,7 @@
     }
 
     &__counter {
-        font-size: 18px;
+        font-size: 16px;
         display: block;
         padding: 5px;
 
@@ -52,6 +52,13 @@
 
     &__wishlist {
         position: relative;
+
+        .header-right__counter {
+            @media all and (min-width: $bp-header) {
+                position: absolute;
+                right: -15px;
+            }
+        }
     }
 
     &__wishlist-icon {
